# battleship-rs

./: Cargo.toml  README.md
src/: board.rs  fleet.rs  game.rs  input.rs  main.rs  ship.rs  utils.rs
src/core/: game.rs  input.rs  mod.rs
src/models/: board.rs  fleet.rs  mod.rs  player.rs  point.rs  ship.rs  shot.rs
src/utils/: mod.rs  stringutil.rs
